# -bazel_performance_test

./: MODULE.bazel  bazel-bazel_performance_test  maven_install.json
app/hellotest/: BUILD.bazel
app/hellotest/src/test/java/com/hellotest/: GreeterServiceBenchmark.java
